--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4.25"
 hound = "3.5.1"
 half = "2.6.0"
 anyhow = "1.0.86"
+fancy-regex = "0.14.0"
 futures = "0.3"
 async-stream = "0.3"
 tokio = { version = "1.45.1", features = ["full"] }
