--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,14 @@ futures = "0.3"
 async-stream = "0.3"
 tokio = { version = "1.45.1", features = ["full"] }
 env_logger = "0.10"
+serde_json = "1.0"
+num2en = "1.0.0"
+serde = { version = "1.0", features = ["derive"] }
+lazy_static = "1.5.0"
+pest = "2.7"
+pest_derive = "2.7"
+tokenizers = { version = "0.20.0", default-features = false, features = [
+    "onig",
+] }
 [target.'cfg(target_os = "android")'.dependencies]
 ort = { version = "2.0.0-rc.10", features = ["ndarray", "download-binaries", "copy-dylibs", "half", "load-dynamic"] }
