--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ required-features = ["jni"]
 
 
 [dependencies]
-ort = { version = "2.0.0-rc.10", features = [
-    "ndarray",
-    "download-binaries",
-    "copy-dylibs",
-    "half",
-] }
+# ort = { version = "2.0.0-rc.10", features = [
+#     "ndarray",
+#     "download-binaries",
+#     "copy-dylibs",
+#     "half",
+# ] }
 arpabet = "2.0.0"
 jieba-rs = "0.7.2"
 ndarray = "0.16.1"
@@ -42,6 +42,7 @@ tokenizers = { version = "0.20.0", default-features = false, features = [
     "onig",
 ] }
 jni = { version = "0.21", optional = true }
+libc = "0.2"
 
 [features]
 jni = ["dep:jni"] # Enables JNI and dynamic ONNX loading for Android
@@ -55,3 +56,7 @@ ort = { version = "2.0.0-rc.10", features = [
     "load-dynamic",
 ] }
 android_logger = "0.15"
+
+[build-dependencies]
+cc = "1.0"
+cmake = "0.1"
