refactor demo code, reanme default model path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ tokenizers = { version = "0.20.0", default-features = false, features = [
 ] }
 jni = { version = "0.21", optional = true }
 once_cell = "1.21.3"
-
+clap = { version = "4.5", features = ["derive"] }
 [features]
 jni = ["dep:jni"] # Enables JNI and dynamic ONNX loading for Android
 
