--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,9 @@ tokenizers = { version = "0.20.0", default-features = false, features = [
 jni = { version = "0.21", optional = true }
 once_cell = "1.21.3"
 clap = { version = "4.5", features = ["derive"] }
+rustfft = "6.2.0"
+rand = "0.9.1"
+
 [features]
 jni = ["dep:jni"] # Enables JNI and dynamic ONNX loading for Android
 
