--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,8 @@ once_cell = "1.21.3"
 clap = { version = "4.5", features = ["derive"] }
 rustfft = "6.2.0"
 rand = "0.9.1"
-
+smallvec = "1.15"
+regex = "1.11"
 [features]
 jni = ["dep:jni"] # Enables JNI and dynamic ONNX loading for Android
 
