--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,3 +1,8 @@
-onnxsim
-onnxslim
-onnxoptimizer
+onnx>=1.18.0
+onnxconverter-common>=1.13.0
+onnxoptimizer>= 0.3.13
+onnxruntime>= 1.22.0
+onnxruntime_extensions>=0.14.0
+onnxruntime-genai>= 0.6.0
+onnxsim>= 0.4.36
+onnxslim>=0.1.56
