--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ smallvec = "1.15"
 regex = "1.11"
 rubato = "0.16"                                                     # For audio resampling
 unicode-segmentation = "1.10.1"
+knf-rs = "0.3.2"
 
 [features]
 jni = ["dep:jni"] # Enables JNI and dynamic ONNX loading for Android
